Made redirect site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta http-equiv="refresh" content="0; url=http://adf.ly/1aUtmp" />
+	</head>
+
+	<body>
+	</body>
+</html>
