--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=http://adf.ly/1aUtmp" />
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
+		<a href="github.com">Github official site</a>
 	</body>
 </html>
