--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 
 	<body>
-		<a href="github.com">Github official site</a>
+		<a href="http://github.com">Github official site</a>
 	</body>
 </html>
