--- a/Grant's Website/public_html/index.html
+++ b/Grant's Website/public_html/index.html
@@ -12,7 +12,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-    <dev> <a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge</dev>
+    <dev> <a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</dev>
             
     </body>
 </html>
