--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     </head>
     <body>
         <dev></dev><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</dev>
-        <img src=""></img>
+        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjEur21m-3MAhUM5mMKHVcTCf4QjRwIBw&url=http%3A%2F%2Fe2ua.com%2Fgroup%2Fpainting-pictures%2F&psig=AFQjCNHEjHGW39OMvFFLdzaXd4g5gBr8DQ&ust=1463990398896493"></img>
     </body>
 </html>
