--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     </head>
     <body>
         <dev></dev><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</dev>
-        <img src="http://e2ua.com/data/wallpapers/112/WDF_1547438.jpg"></img>
+        <img src="https://afremov.com/image.php?type=P&id=18106"></img>
     </body>
 </html>
