--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body style="background-image:url(https://afremov.com/image.php?type=P&id=18106)">
-        <dev></dev><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</dev>
+        <p></p><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</p>
     </body>
 </html>
