--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body style="background-image:url(https://afremov.com/image.php?type=P&id=18106)">
-        <p></p><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</p>
+    <body>
+        <h1><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</h1>
     </body>
 </html>
