--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</h1>
+        <p><a href="https://github.com/Weirdbob95">Weirdbob95</a>'s Java library called Forge.</p>
     </body>
 </html>
