--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <ul class="nav">
+            <li class="navli"><a href="#">Contributors</a></li>
+            <li class="navli"><a href="#">About</a></li>
+        </ul>
         <p><a href="https://github.com/Weirdbob95">Weirdbob95's</a> Java library called Forge.</p>
     </body>
 </html>
