--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ and open the template in the editor.
             <li class="navli"><a href="#">Contributors</a></li>
             <li class="navli"><a href="#">About</a></li>
         </ul>
-        <p><a href="https://github.com/Weirdbob95">Weirdbob95's</a> Java library called Forge.</p>
+        <h1>Contributors</h1>
+        <ul>
+            <li><a href="http://github.com/proffesorg">Grant V. "ProfessorG"</a></li>
+            <li><a href="http://github.com/kosmicco">Cruz B. "KosmicCo"</a></li>
+        </ul>
     </body>
 </html>
