--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ and open the template in the editor.
     </head>
     <body>
         <ul class="nav">
-            <li class="navli"><a href="#">Contributors</a></li>
+            <li class="navli"><a href="#contributors">Contributors</a></li>
             <li class="navli"><a href="#">About</a></li>
         </ul>
         <h1>Contributors</h1>
-        <ul>
+        <ul name="contributors">
             <li><a href="http://github.com/proffesorg">Grant V. "ProfessorG"</a></li>
             <li><a href="http://github.com/kosmicco">Cruz B. "KosmicCo"</a></li>
         </ul>
