--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ and open the template in the editor.
             <li class="navli"><a href="#contributors">Contributors</a></li>
             <li class="navli"><a href="#">About</a></li>
         </ul>
+        <a  name="contributors"></a>
         <h1>Contributors</h1>
-        <ul name="contributors">
+        <ul>
             <li><a href="http://github.com/proffesorg">Grant V. "ProfessorG"</a></li>
             <li><a href="http://github.com/kosmicco">Cruz B. "KosmicCo"</a></li>
         </ul>
