--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
         <a  name="contributors"></a>
         <h1>Contributors</h1>
         <ul>
-            <li><a href="http://github.com/proffesorg">Grant V. "ProfessorG"</a></li>
+            <li><a href="http://github.com/professorg">Grant V. "ProfessorG"</a></li>
             <li><a href="http://github.com/kosmicco">Cruz B. "KosmicCo"</a></li>
         </ul>
     </body>
