--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ and open the template in the editor.
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript"> 
+            var adfly_id = 6295918; 
+            var popunder_frequency_delay = 0; 
+        </script> 
+        <script src="http://cdn.adf.ly/js/display.js"></script> 
     </head>
     <body>
         <ul class="nav">
