--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li class="navli"><a href="#">About</a></li>
         </ul>
         
-        <div class="background">
+        <div class="background" width=500px>
             <a  name="contributors"></a>
             <h1>Contributors</h1>
             <ul>
