--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <li class="navli"><a href="#">About</a></li>
         </ul>
         
-        <div class="background" style="padding: 25px 25px 25px 25px">
+        <div class="background" style="width: 500px; padding: 10px; margin: 10px">
             <a  name="contributors"></a>
             <h1>Contributors</h1>
             <ul>
