--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ and open the template in the editor.
             <li class="navli"><a href="#">About</a></li>
         </ul>
         
-        <div class="background" style="width: 500px; padding: 10px; margin: 10px">
-            <a  name="contributors"></a>
+        <div class="background c" style="width: 500px; padding: 10px; margin: 10px">
+            <a name="contributors"></a>
             <h1>Contributors</h1>
             <ul>
                 <li><a href="http://github.com/professorg">Grant V. "ProfessorG"</a></li>
