--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         
         <ul class="nav">
             <li class="navli"><a href="#contributors">Contributors</a></li>
-            <li class="navli"><a href="#">About</a></li>
+            <li class="navli"><a href="http://tinyurl.com/cat-in-space">About</a></li>
         </ul>
         
         <div class="background c" style="width: 0 auto; padding: 25px; margin: 10px">
