--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ and open the template in the editor.
     <body>
         
         <ul class="nav">
-            <li class="navli"><a href="#contributors">Contributors</a></li>
-            <li class="navli"><a href="http://tinyurl.com/cat-in-space">About</a></li>
+            <li><a href="#contributors">Contributors</a></li>
+            <li><a href="http://tinyurl.com/cat-in-space">About</a></li>
+            <li><a href="redirect">"Donate"</a></li>
         </ul>
         
         <div class="background c" style="width: 0 auto; padding: 25px; margin: 10px">
