--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script>
             var roll = function() {
-                document.getElementById("rr").innerHTML = "<iframe width=\"420\" height=\"315\" src=\"https://www.youtube.com/embed/oHg5SJYRHA0\" frameborder=\"0\" allowfullscreen></iframe>";
+                document.getElementById("rr").innerHTML = "<iframe width=\"420\" height=\"315\" src=\"https://www.youtube.com/embed/oHg5SJYRHA0?autoplay=1\" frameborder=\"0\" allowfullscreen></iframe>";
             }
         </script>
     </head>
