--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ and open the template in the editor.
         <script>
             var roll = function() {
                 document.getElementById("rr").innerHTML = "<iframe width=\"420\" height=\"315\" src=\"https://www.youtube.com/embed/oHg5SJYRHA0?autoplay=1\" frameborder=\"0\" allowfullscreen></iframe>";
+                document.getElementById("rr").removeAttribute("onclick");
             }
         </script>
     </head>
