--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ and open the template in the editor.
     <body>
         
         <ul class="nav">
-            <li><a href="#contributors">Contributors</a></li>
-            <li><a href="#" onclick="roll()" id="rr">About</a></li>
+            <li><a href="contributors">Contributors</a></li>
+            <li><a href="#" id="rr">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
         </ul>
         
