--- a/contributors.html
+++ b/contributors.html
@@ -15,8 +15,9 @@ and open the template in the editor.
     
     <body>
         <ul class="nav">
-            <li><a href="#contributors">Contributors</a></li>
-            <li><a href="#" onclick="roll()" id="rr">About</a></li>
+            <li><a href="index">Home</a></li>
+            <li class="active"><a href="contributors">Contributors</a></li>
+            <li><a href="#" id="rr">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
         </ul>
         
