--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
     <body>
         
         <ul class="nav">
-            <li class="active"><a href="index">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="contributors">Contributors</a></li>
             <li><a href="#" id="rr">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
