--- a/contributors.html
+++ b/contributors.html
@@ -15,7 +15,7 @@ and open the template in the editor.
     
     <body>
         <ul class="nav">
-            <li><a href="index">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li class="active"><a href="contributors">Contributors</a></li>
             <li><a href="#" id="rr">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
