--- a/contributors.html
+++ b/contributors.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         <ul class="nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="contributors">Contributors</a></li>
-            <li><a href="#" id="rr">About</a></li>
+            <li><a href="about">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
         </ul>
         
