--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ and open the template in the editor.
         <ul class="nav">
             <li><a href="/">Home</a></li>
             <li><a href="contributors">Contributors</a></li>
-            <li class="active"><a href="about" id="rr">About</a></li>
+            <li class="active"><a href="about">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
         </ul>
         
