--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
         <ul class="nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="contributors">Contributors</a></li>
-            <li><a href="#" id="rr">About</a></li>
+            <li><a href="about">About</a></li>
             <li><a href="redirect">"Donate"</a></li>
         </ul>
         
