--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             <li><a href="/">Home</a></li>
             <li><a href="contributors">Contributors</a></li>
             <li class="active"><a href="about">About</a></li>
-            <li><a href="redirect">"Donate"</a></li>
+            <li><a href="donate">Donate</a></li>
         </ul>
         
     </body>
