--- a/contributors.html
+++ b/contributors.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             <li><a href="/">Home</a></li>
             <li class="active"><a href="contributors">Contributors</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="redirect">"Donate"</a></li>
+            <li><a href="donate">Donate</a></li>
         </ul>
         
         <div class="background" style="width: 0 auto; padding: 25px; margin: 10px">
