--- a/contributors.html
+++ b/contributors.html
@@ -21,7 +21,7 @@ and open the template in the editor.
             <li><a href="donate">Donate</a></li>
         </ul>
         
-        <div class="background" style="width: 0 auto; padding: 25px; margin: 10px">
+        <div class="background">
             <a name="contributors"></a>
             <h1>Contributors</h1>
             <ul>
