--- a/thanks.html
+++ b/thanks.html
@@ -23,7 +23,7 @@ and open the template in the editor.
         </ul>
         
         <div class="background">
-            <p>Thank you for your donation!</p>
+            <h3>Thank you for your donation!</h3>
             <a href="/">Back to site</a>
         </div>
         
