--- a/contributors.html
+++ b/contributors.html
@@ -11,6 +11,11 @@ and open the template in the editor.
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript"> 
+            var adfly_id = 6295918; 
+            var popunder_frequency_delay = 0; 
+        </script> 
+        <script src="https://cdn.adf.ly/js/display.js"></script>
     </head>
     
     <body>
