--- a/iframe.html
+++ b/iframe.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-    <iframe src="http://professorg.github.io/iframe.html"></iframe>
+    <iframe src="."></iframe>
   </body>
 </html>
